err
  CHK     include/config/kernel.release
make KBUILD_SRC=
  CHK     include/config/kernel.release
  CHK     include/generated/uapi/linux/version.h
  DESCEND  objtool
  CHK     include/generated/utsrelease.h
  CHK     include/generated/timeconst.h
  CHK     include/generated/bounds.h
  CC      arch/x86/kernel/asm-offsets.s
In file included from ./include/fsac/fsac.h:19,
                 from ./include/fsac/fsac_preempt.h:8,
                 from ./include/linux/sched.h:64,
                 from ./include/linux/kasan.h:4,
                 from ./include/linux/slab.h:118,
                 from ./include/linux/crypto.h:24,
                 from arch/x86/kernel/asm-offsets.c:8:
./include/linux/uaccess.h: In function ‘pagefault_disabled_inc’:
./include/linux/uaccess.h:12:9: error: dereferencing pointer to incomplete type ‘struct task_struct’
  current->pagefault_disabled++;
         ^~
make[3]: *** [Kbuild:82: arch/x86/kernel/asm-offsets.s] Error 1
make[2]: *** [Makefile:1035: prepare0] Error 2
make[1]: *** [scripts/package/Makefile:97: bindeb-pkg] Error 2
make: *** [Makefile:1331: bindeb-pkg] Error 2
